--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "glslify": "^6.2.1",
     "glslify-import-loader": "^0.1.2",
     "glslify-loader": "^1.0.2",
-    "raw-loader": "^0.5.1"
+    "raw-loader": "^0.5.1",
+    "webpack-glsl-loader": "^1.0.1"
   }
 }
